controller/build/log/idf_py_stdout_output_28928
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D C:\obsidian\main\mero\controller\build\bootloader\esp-idf\esptool_py && C:\apps\Espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/obsidian/main/mero/controller/build/bootloader/bootloader.bin"
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/controller.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/controller.c.obj 
ccache C:\apps\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/obsidian/main/mero/controller/build/config -IC:/obsidian/main/mero/controller/main -IC:/esp-idf/components/newlib/platform_include -IC:/esp-idf/components/freertos/config/include -IC:/esp-idf/components/freertos/config/include/freertos -IC:/esp-idf/components/freertos/config/xtensa/include -IC:/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp-idf/components/freertos/esp_additions/include -IC:/esp-idf/components/esp_hw_support/include -IC:/esp-idf/components/esp_hw_support/include/soc -IC:/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/esp-idf/components/esp_hw_support/dma/include -IC:/esp-idf/components/esp_hw_support/ldo/include -IC:/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp-idf/components/esp_hw_support/port/esp32/include -IC:/esp-idf/components/heap/include -IC:/esp-idf/components/heap/tlsf -IC:/esp-idf/components/log/include -IC:/esp-idf/components/soc/include -IC:/esp-idf/components/soc/esp32 -IC:/esp-idf/components/soc/esp32/include -IC:/esp-idf/components/soc/esp32/register -IC:/esp-idf/components/hal/platform_port/include -IC:/esp-idf/components/hal/esp32/include -IC:/esp-idf/components/hal/include -IC:/esp-idf/components/esp_rom/include -IC:/esp-idf/components/esp_rom/esp32/include -IC:/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/esp-idf/components/esp_rom/esp32 -IC:/esp-idf/components/esp_common/include -IC:/esp-idf/components/esp_system/include -IC:/esp-idf/components/esp_system/port/soc -IC:/esp-idf/components/esp_system/port/include/private -IC:/esp-idf/components/xtensa/esp32/include -IC:/esp-idf/components/xtensa/include -IC:/esp-idf/components/xtensa/deprecated_include -IC:/esp-idf/components/lwip/include -IC:/esp-idf/components/lwip/include/apps -IC:/esp-idf/components/lwip/include/apps/sntp -IC:/esp-idf/components/lwip/lwip/src/include -IC:/esp-idf/components/lwip/port/include -IC:/esp-idf/components/lwip/port/freertos/include -IC:/esp-idf/components/lwip/port/esp32xx/include -IC:/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp-idf/components/driver/deprecated -IC:/esp-idf/components/driver/i2c/include -IC:/esp-idf/components/driver/touch_sensor/include -IC:/esp-idf/components/driver/twai/include -IC:/esp-idf/components/driver/touch_sensor/esp32/include -IC:/esp-idf/components/esp_pm/include -IC:/esp-idf/components/esp_ringbuf/include -IC:/esp-idf/components/esp_driver_gpio/include -IC:/esp-idf/components/esp_driver_pcnt/include -IC:/esp-idf/components/esp_driver_gptimer/include -IC:/esp-idf/components/esp_driver_spi/include -IC:/esp-idf/components/esp_driver_mcpwm/include -IC:/esp-idf/components/esp_driver_ana_cmpr/include -IC:/esp-idf/components/esp_driver_i2s/include -IC:/esp-idf/components/esp_driver_sdmmc/include -IC:/esp-idf/components/sdmmc/include -IC:/esp-idf/components/esp_driver_sdspi/include -IC:/esp-idf/components/esp_driver_sdio/include -IC:/esp-idf/components/esp_driver_dac/include -IC:/esp-idf/components/esp_driver_rmt/include -IC:/esp-idf/components/esp_driver_tsens/include -IC:/esp-idf/components/esp_driver_sdm/include -IC:/esp-idf/components/esp_driver_i2c/include -IC:/esp-idf/components/esp_driver_uart/include -IC:/esp-idf/components/vfs/include -IC:/esp-idf/components/esp_driver_ledc/include -IC:/esp-idf/components/esp_driver_parlio/include -IC:/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/esp-idf/components/esp_driver_twai/include -IC:/esp-idf/components/nvs_flash/include -IC:/esp-idf/components/esp_partition/include -IC:/esp-idf/components/bt/include/esp32/include -IC:/esp-idf/components/bt/common/osi/include -IC:/esp-idf/components/bt/common/api/include/api -IC:/esp-idf/components/bt/common/btc/profile/esp/blufi/include -IC:/esp-idf/components/bt/common/btc/profile/esp/include -IC:/esp-idf/components/bt/common/hci_log/include -IC:/esp-idf/components/bt/common/ble_log/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/ans/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/bas/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/dis/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/gap/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/gatt/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/hr/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/htp/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/ias/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/ipss/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/lls/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/prox/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/cts/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/tps/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/hid/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/sps/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/services/cte/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/util/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/store/ram/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/host/store/config/include -IC:/esp-idf/components/bt/host/nimble/nimble/porting/nimble/include -IC:/esp-idf/components/bt/host/nimble/port/include -IC:/esp-idf/components/bt/host/nimble/nimble/nimble/transport/include -IC:/esp-idf/components/bt/porting/include -IC:/esp-idf/components/bt/host/nimble/nimble/porting/npl/freertos/include -IC:/esp-idf/components/bt/host/nimble/esp-hci/include -IC:/esp-idf/components/esp_timer/include -IC:/esp-idf/components/esp_wifi/include -IC:/esp-idf/components/esp_wifi/include/local -IC:/esp-idf/components/esp_wifi/wifi_apps/include -IC:/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/esp-idf/components/esp_event/include -IC:/esp-idf/components/esp_phy/include -IC:/esp-idf/components/esp_phy/esp32/include -IC:/esp-idf/components/esp_netif/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/obsidian/main/mero/controller=. -fmacro-prefix-map=C:/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/controller.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\controller.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/controller.c.obj -c C:/obsidian/main/mero/controller/main/controller.c
C:/obsidian/main/mero/controller/main/controller.c:32:28: error: 'cmd_chr_uuid' defined but not used [-Werror=unused-const-variable=]
   32 | static const ble_uuid128_t cmd_chr_uuid =
      |                            ^~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
